--- a/_posts/2017-11-07-Round-1-Day-36.markdown
+++ b/_posts/2017-11-07-Round-1-Day-36.markdown
@@ -11,4 +11,4 @@ Earlier this week, I had some success with deploying to AWS Elastic Beanstalk. M
 
 The next step is to fix POST requests. I installed Postman in order to test my API more thoroughly than I can do easily with a browser. When I use this program to send a POST request, the API replies with "Forbidden (403) CSRF verification failed." From what I can tell, I need to either turn off CSRF verification or implement authentication. I am going the later route.
 
-To impelement authentication, I have decided to use Django Rest Framework. I have been reading the docs for the past few days for 15 to 30 minutes. Since I am using this library, I going all out. I will use it for more than just the authentication. Yesterday I started implementing serializers, and I continued with them this morning. This has already simplified the code for my REST API. After I finish with this step, I will look at ModelViews and ModelViewSets.
+To impelement authentication, I have decided to use Django Rest Framework. I have been reading the docs for the past few days for 15 to 30 minutes each day. Since I am using this library, I am going all out. I will use it for more than just the authentication. Yesterday I started implementing serializers, and I continued with them this morning. This has already simplified the code for my REST API. After I finish with this step, I will look at ModelViews and ModelViewSets.
